<resources>
    <string name="app_name">TownTalk Dashboard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="log_in">LOGIN</string>

    <string name="sign_up">SignUp</string>

    <string name="username">Username</string>

    <string name="email">Email</string>

    <string name="password">Password</string>

    <string name="confirm_password">Confirm Password</string>

    <string name="create_account">Create Account</string>

    <string name="back">Back</string>
    <string name="my_reports">My Reports</string>
    <string name="log_out">Log Out</string>
    <string name="recent_reports">Recent Reports</string>
    <string name="topic">Topic</string>
    <string name="description">Description</string>
    <string name="upload_media">Upload Media</string>
    <string name="phone">Phone</string>
    <string name="read_more">Read more</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="report_description">Report Description</string>
    <string name="report_title">Report Title</string>
    <string name="admin">Admin</string>
    <string name="zero">0</string>
    <string name="home">Home</string>
    <string name="reports">Reports</string>
    <string name="profile">Profile</string>
    <string name="report">Report</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="report_attached_media">Report Attached Media</string>
    <string name="report_media_upload">Report Media Upload</string>
    <string name="submit">Submit</string>
    <string name="remove_post">Remove Post</string>
    <string name="edit_post">Edit Post</string>
    <string name="barangay_response">Barangay Response</string>
    <string name="response">Response...</string>
    <string name="enter_barangay_response">Enter Barangay Response</string>
    <string name="submit_response">Submit Response</string>

</resources>