<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_black"
    android:padding="16dp"
    tools:context=".HomeReadReportPage">

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/back"
        android:textColor="@color/red"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:ellipsize="end" />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:ellipsize="end" />

    </LinearLayout>

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:ellipsize="end"
        android:layout_marginBottom="10dp" />

    <ImageView
        android:id="@+id/mediaImageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/report_attached_media" />

    <TextView
        android:id="@+id/barangay_response"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/barangay_response"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:visibility="gone"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/response"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:visibility="gone"
        android:textColor="@color/white"
        android:text="@string/response"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:visibility="gone">

        <Button
            android:id="@+id/edit_post_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/edit_post"
            android:textColor="@color/white"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/green"
            android:visibility="gone"/>

        <Button
            android:id="@+id/remove_post_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/remove_post"
            android:textColor="@color/white"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/red"
            android:visibility="gone"/>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>