<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AdminReportDetailsPage"
    android:background="@color/light_black">

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/back"
        android:textColor="@color/red" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/reportTitleTextView"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:text="@string/report_title"
            android:textSize="20sp"
            android:padding="8dp" />

        <TextView
            android:id="@+id/reportDateTextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:padding="8dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/reportDescriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textColor="@color/white"
        android:text="@string/report_description"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/mediaImageView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:contentDescription="@string/report_attached_media" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="16dp">

        <Button
            android:id="@+id/acceptButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/accept"
            android:textColor="@color/white"
            android:background="@color/green"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>

        <Button
            android:id="@+id/rejectButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reject"
            android:textColor="@color/white"
            android:background="@color/red"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>
