<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".HomeReportItem"
    android:background="@drawable/border"
    android:padding="16dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:maxLines="1"
            android:ellipsize="end" />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:maxLines="1"
            android:ellipsize="end" />

    </LinearLayout>

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:maxLines="3"
        android:ellipsize="end"
        android:layout_marginBottom="8dp" />

    <ImageView
        android:id="@+id/mediaImageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/report_attached_media"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/readMoreTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/read_more"
        android:textSize="14sp"
        android:textColor="@color/red"
        android:layout_marginBottom="8dp" />

</LinearLayout>
