<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".UserSubmitReport">

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/back"
        android:textColor="@color/red" />

    <TextView
        android:id="@+id/topicTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topic"
        android:textColor="@color/black"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/topicReportInput"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="@color/black"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/descriptionReportInput"
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:inputType="textMultiLine"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:gravity="top|start"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_media"
        android:textColor="@color/black"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/uploadMediaButton"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:background="@drawable/border"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="15dp"
        android:clickable="true"
        android:layout_marginTop="5dp"
        android:focusable="true">

        <ImageView
            android:id="@+id/uploadMediaImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/baseline_image_24"
            android:contentDescription="@string/report_media_upload" />

    </LinearLayout>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/submit"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:layout_marginBottom="10dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>