<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AdminReportResponsePage">

    <TextView
        android:id="@id/response"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:text="@string/barangay_response"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:id="@+id/barangayResponseEditText"
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/border"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:inputType="textMultiLine"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:gravity="top|start"
        android:hint="@string/enter_barangay_response"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/submitResponseButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/submit_response"
        android:textColor="@color/white"
        android:background="@drawable/button"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="25sp" />

</androidx.appcompat.widget.LinearLayoutCompat>